feat(Class): Add routes and their docs
