# src/routes/index.ts
@@ -2,6 +2,7 @@ import { Router } from "express";
 import { eventRouter } from "./event.routes";
 import { disciplineRouter } from "./discipline.routes";
 import { userRouter } from "./user.routes";
+import { classRouter } from "./class.routes";
 
 const router = Router();
 
@@ -10,5 +11,6 @@ router.get('/', (req, res )=> {res.sendFile('index.html')});
 router.use("/event", eventRouter);
 router.use("/users", userRouter);
 router.use("/discipline", disciplineRouter);
+router.use("/class", classRouter);
 
 export {router};
