# src/swagger.json
@@ -178,6 +178,164 @@
           }
         }
       }
+    },
+    "/class": {
+      "get": {
+        "summary": "Listar todas as turmas",
+        "description": "Essa rota fornece a listagem de todas as turmas existentes no banco de dados.",
+        "tags": ["Turma"],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Class"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      },
+      "post": {
+        "summary": "Criar uma turma",
+        "description": "Essa rota fornece o recurso de criar uma turma.",
+        "tags": ["Turma"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "$ref": "#/components/schemas/Class"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Class"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/event/{id}": {
+      "get": {
+        "summary": "Busca uma turma",
+        "description": "Essa rota fornece o recurso de buscar uma turma peo seu id.",
+        "tags": ["Turma"],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Class"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      },
+      "put": {
+        "summary": "Editar uma turma",
+        "description": "Essa rota é responsável por editar uma determinada turma",
+        "tags": ["Turma"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Class"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Class"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      },
+      "patch": {
+        "summary": "Editar parcialmente uma turma",
+        "description": "essa rota é responsável por editar uma turma de forma parcial",
+        "tags": ["Turma"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Class"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Class"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Deletar uma turma",
+        "description": "Essa rota é responsável por deletar uma turma",
+        "tags": ["Turma"],
+        "responses": {
+          "204": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Class"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -247,6 +405,37 @@
           "endDate": {
             "type": "date",
             "required": false
+          },
+          "createdAt": {
+            "type": "date",
+            "required": false,
+            "writeOnly": true
+          },
+          "updateAt": {
+            "type": "date",
+            "required": false,
+            "writeOnly": true
+          }
+        }
+      },
+      "Class": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "required": false
+          },
+          "name": {
+            "type": "string",
+            "required": true
+          },
+          "academicYear": {
+            "type": "string",
+            "required": true
+          },
+          "period": {
+            "type": "boolean",
+            "required": true
           },
           "createdAt": {
             "type": "date",
